# rstore

./: Cargo.toml  README.md  build.rs
proto/: replication.proto  store.proto
src/: client.rs  follower.rs  leader.rs  proto.rs  server.rs  store.rs
src/leader/: follower_client.rs  mod.rs  pending_updates.rs
