[package]
name = "rstore"
version = "0.1.0"
authors = ["quan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
tonic = "0.4.3"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
